# Play-Jump

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  railway.json  start.sh
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_create_users.sql
backend/src/: main.rs
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/assets/: CharacterAnimation.ts
frontend/src/components/: CharacterPreview.tsx  CharacterRenderer.tsx  CharacterSelector.tsx
frontend/src/pages/: Game.tsx  Landing.tsx  Login.tsx  Register.tsx
frontend/src/pixi/: animationLoader.ts
frontend/src/styles/: CharacterSelector.css  global.css
